                 ================================
                 Release Notes for Samba 3.0.2rc2
                         January XX, 2004
                 ================================

This is a release candidate snapshot of the Samba 3.0.2 code 
base and should be considered for testing only.  A release 
candidate (RC) means that we are close to the final, stable 
release and in provided for Quality Assurance (QA) purposes.  
This release is *not* intended for production servers.  Use 
at your own risk.

There have been several bug fixes since the 3.0.1 release that
we feel are important to make available to the Samba community
for wider testings.  See the "Changes" section for details on
exact updates.

Common bugs fixed in this preview release include:

  o <FILL THIS IN>


######################################################################
Changes
#######
Changes since 3.0.2rc1
----------------------

Please refer to the CVS log for the SAMBA_3_0 branch for complete
details.  The list of changes per contributor are as follows:

o   Jeremy Allison <jra@samba.org>
    * Fix SMB signing bug when copying large files.

      
o   Andrew Bartlet <abartlet@samba.org>
    * Include additional NT_STATUS to PAM error mappings.

    
o   Luca Bolcioni <Luca.Bolcioni@yacme.com>
    * Fix crash when using 'security = server' and 'encrypt 
      passwords = no' by always initializing the session key.

      
o   Gerald (Jerry) Carter <jerry@samba.org>
    * Fix bug that caused rpcclient to incorrectly retrieve 
      the SID for a server (this casuing all calls that required 
      this information to fail). 
    * BUG 977: Don't create a homes share for a user if a static 
      share already exists by the same name.
    * Set the disable flag for template accounts created by mksmbpasswd.sh.


o   LaMont Jones <lamont@debian.org>
    * BUG 225328 (Debian): Correct false failure LFS test that resulted 