@@ -1,6 +1,6 @@
                  ================================
                  Release Notes for Samba 3.0.2rc2
-                         January XX, 2004
+                         January 31, 2004
                  ================================
 
 This is a release candidate snapshot of the Samba 3.0.2 code 
@@ -26,6 +26,12 @@ Changes
 Changes since 3.0.2rc1
 ----------------------
 
+    Parameter Name              Action
+    --------------              ------
+    read size                   removed (unused)
+    source environment          removed (unused)
+
+
 Please refer to the CVS log for the SAMBA_3_0 branch for complete
 details.  The list of changes per contributor are as follows:
 
@@ -48,6 +54,7 @@ o   Gerald (Jerry) Carter <jerry@samba.org>
       this information to fail). 
     * BUG 977: Don't create a homes share for a user if a static 
       share already exists by the same name.
+    * Removed unused smb.conf options.
     * Set the disable flag for template accounts created by mksmbpasswd.sh.
 
 
@@ -763,11 +770,14 @@ Removed Parameters (order alphabetically):
   * domain guest group
   * force unknown acl user
   * hide local users
+  * mangled stack
   * nt smb support
   * postscript
   * printer driver
   * printer driver file
   * printer driver location
+  * read size
+  * source environment
   * status
   * strip dot
   * total print jobs
@@ -856,6 +866,7 @@ New Parameters (new parameters have been grouped by function):
   * ldap idmap suffix
   * ldap machine suffix
   * ldap passwd sync
+  * ldap replication sleep
   * ldap user suffix
   
   General Configuration
